# algoritmos-2023

./: .gitignore  CMakeLists.txt
Clase 01-06/: Vectores.cpp
Clase 04-05/: ejercicio1.cpp  ejercicio2.cpp  ejercicio3.cpp  ejercicio4.cpp  ejercicio5.cpp  suma.cpp
Clase 15-06/: main.cpp
Trabajo-practico-1c/: ejercicio1.cpp  ejercicio2.cpp  ejercicio3.cpp  ejercicio4.cpp
cpps-profe/: Arch Ord 2023.cpp  Ej 1 Practica parcial 2023.cpp
cpps-profe/08-06/: Matrices 2023.cpp  Vector - MaxyMin 2023.cpp  Vector - buscar 2023.cpp  Vectores - Elim 2023.cpp  Vectores Bus Bin - 2023.cpp
ejercicios-guia/: ejercicio1.cpp  ejercicio10.cpp  ejercicio11.cpp  ejercicio12.cpp  ejercicio13.cpp  ejercicio14.cpp  ejercicio15.cpp  ejercicio16.cpp  ejercicio17.cpp  ejercicio18.cpp  ejercicio2.cpp  ejercicio3.cpp  ejercicio4.cpp  ejercicio5.cpp  ejercicio6.cpp  ejercicio7.cpp  ejercicio8.cpp  ejercicio9.cpp
ejercicios-vectores/: ejercicio1.cpp  ejercicio2.cpp
practica-pre-parcial/: main.cpp  main.h
practica-pre-parcial/ejercicio1/: productos_fabrica.cpp  productos_fabrica.h
practica-pre-parcial/ejercicio2/: copa_america.cpp  copa_america.h
practica-pre-parcial/ejercicio3/: maratones.cpp  maratones.h
practica-pre-parcial/ejercicio4/: proveedores.cpp  proveedores.h
practica-pre-parcial/ejercicio5/: proveedores.cpp  proveedores.h
practica-pre-parcial/ejercicio6/: peliculas_infantiles.h
practica-pre-parcial/ejercicio7/: deposito.cpp  deposito.h
repaso-parcial/: cargar.h  datos_cargados  leer.h  parcial.cpp  proovedores.h  repaso_parcial.cpp  struct.h
(+4 files in other folders)
