cmake_minimum_required(VERSION 3.25)
project(algoritmos_2023)

set(CMAKE_CXX_STANDARD 14)

include_directories(practica-pre-parcial)

add_executable(algoritmos_2023
        practica-pre-parcial/ejercicio2/copa_america.cpp
        practica-pre-parcial/ejercicio2/copa_america.h practica-pre-parcial/ejercicio2/copa_america.cpp)
